# Langtheatre

./: .gitignore  README.en.md  README.md  package-lock.json  package.json
.cursor/agents/: top-frontend-ui-architect.md
.github/agents/: uidesign.agent.md
.github/workflows/: ci.yml  deploy.yml  dockerhub.yml  release-all.yml  tauri-multi-platform.yml
apps/client/: .ci-rebuild-trigger  .dockerhub-trigger  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/client/src/: App.tsx  api.ts  audio.ts  main.tsx  store.test.ts  store.ts  styles.css  types.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src/pages/: CoursesPage.tsx  GeneratePage.tsx  LibraryPage.tsx  LoginPage.tsx  ProfilePage.tsx  QuizPage.tsx  ReadingDetailPage.tsx  ReadingGeneratePage.tsx  ReadingPage.tsx  ResultPage.tsx  RoleplayPage.tsx  TheaterPage.tsx
apps/server/: Dockerfile  go.mod  go.sum  linguaquest.db
apps/server/cmd/server/: main.go
apps/server/internal/ai/: cantonese_transformer.go  generator.go  prompt_catalog.go  (+5 more)
apps/server/migrations/: 001_init.sql
demand/: PDD.MD  PRD.MD  TDD.MD
docs/: api.md  deploy.md  env.example.md  mvp-release-checklist.md  phase2-roadmap.md  runbook.md  startup.md  test-report.md
infra/: docker-compose.deploy.yml  docker-compose.yml
infra/cloudflare/: worker.js  wrangler.toml
infra/scripts/: deploy-api.sh  rollback-api.sh
tests/e2e/: mvp.spec.ts  package.json  playwright.config.ts
tests/perf/: k6-smoke.js
(+22 files in other folders)
